objects/Contest__c.object
<CustomObject>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Yodlers__c</fullName>
        <label>Count of Yodlers</label>
        <summaryForeignKey>Prize_Winner__c.Contest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Potential_Changes__c</fullName>
        <label>Feedback/Potential Changes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Money_Allotted__c</fullName>
        <label>Money Allotted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Spent__c</fullName>
        <formula>Total_Spent__c / Money_Allotted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Spent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prize_s__c</fullName>
        <label>Prize(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-not effective. no impact on rep performance</fullName>
                </value>
                <value>
                    <fullName>2-Somewhat effective.  Some of the team worked harder to win</fullName>
                </value>
                <value>
                    <fullName>3-Effective.  Most of the team was working to win</fullName>
                </value>
                <value>
                    <fullName>4-Very effective.  Whole team was excited &amp; invested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>AZ-Teitelman</fullName>
                </value>
                <value>
                    <fullName>AZ-Venneri</fullName>
                </value>
                <value>
                    <fullName>BOS-Albee</fullName>
                </value>
                <value>
                    <fullName>BOS-Gross</fullName>
                </value>
                <value>
                    <fullName>BOS-Williams</fullName>
                </value>
                <value>
                    <fullName>CLT-Eaton</fullName>
                </value>
                <value>
                    <fullName>CLT-Pirrone</fullName>
                </value>
                <value>
                    <fullName>National-Sherry</fullName>
                </value>
                <value>
                    <fullName>National-Zang</fullName>
                </value>
                <value>
                    <fullName>NYC-Defina</fullName>
                </value>
                <value>
                    <fullName>NYC-Depatria</fullName>
                </value>
                <value>
                    <fullName>NYC-Rosner</fullName>
                </value>
                <value>
                    <fullName>PHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Flight_Costs__c</fullName>
        <label>Total Flight Costs</label>
        <summarizedField>Prize_Winner__c.Total_Flight_Costs__c</summarizedField>
        <summaryForeignKey>Prize_Winner__c.Contest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <label>Total Spent</label>
        <summarizedField>Prize_Winner__c.Prize_Value__c</summarizedField>
        <summaryForeignKey>Prize_Winner__c.Contest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Customer Promo</fullName>
                </value>
                <value>
                    <fullName>New Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parameters__c</fullName>
        <label>Parameters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal #</fullName>
                </value>
                <value>
                    <fullName>Bookings Revenue</fullName>
                </value>
                <value>
                    <fullName>Launches Revenue</fullName>
                </value>
                <value>
                    <fullName>Dials</fullName>
                </value>
                <value>
                    <fullName>Demos</fullName>
                </value>
                <value>
                    <fullName>Talk-Time</fullName>
                </value>
                <value>
                    <fullName>% to Goal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used for tracking sales contests and promos</description>
    <label>Contest</label>
    <nameField>
        <label>Contest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Rogers_Support_Contest</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LHMA_Post_Launch_Contest</fullName>
        <filterScope>Queue</filterScope>
        <label>LHMA Post Launch</label>
        <queue>LHMA_Post_Launch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>master</fullName>
        <active>true</active>
        <label>master</label>
    </recordTypes>
</CustomObject>